# src/api/v1/openapi/openapi.yaml
@@ -313,87 +313,5 @@ components:
                 required:
                   - code
                   - message
-components:
-  schemas:
-    Task:
-      type: object
-      properties:
-        id:
-          type: integer
-          description: Уникальный идентификатор
-          example: 1
-        name:
-          type: string
-          description: Наименование
-          example: "Пример задачи"
-        search:
-          type: string
-          description: Поисковая строка
-          example: "пример задачи"
-        createdAt:
-          type: string
-          format: date-time
-          description: Дата создания
-          example: '2024-10-10T10:00:01'
-        createdBy:
-          type: string
-          description: Создано кем
-          example: Иванов
-        updatedAt:
-          type: string
-          format: date-time
-          description: Дата обновления
-          example: '2024-09-09T09:09:09'
-        updatedBy:
-          type: string
-          description: Обновлено кем
-          example: Петров
-      required:
-        - name
-    Error:
-      type: object
-      properties:
-        code:
-          type: string
-        message:
-          type: string
-      required:
-        - code
-        - message
-  responses:
-    Unauthorized:
-      description: Ошибка авторизации
-      content:
-        application/json:
-          schema:
-            properties:
-              Error:
-                type: object
-                properties:
-                  code:
-                    type: string
-                  message:
-                    type: string
-                required:
-                  - code
-                  - message
-    Error400:
-      description: Ошибка
-      content:
-        application/json:
-          schema:
-            properties:
-              Error:
-                type: object
-                properties:
-                  code:
-                    type: string
-                  message:
-                    type: string
-                  stack:
-                    type: string
-                required:
-                  - code
-                  - message
 security:
   - JWT: []
